// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a relative change 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "stretch",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#5F667D",
          "display": "flex",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "lineHeight": 16,
        },
      ]
    }
  >
    12.0%
     
  </Text>
  <View
    style={
      Array [
        Object {
          "display": "flex",
          "flexGrow": 0,
          "flexShrink": 0,
          "height": 0,
          "width": 0,
        },
      ]
    }
  />
  <Text
    style={
      Array [
        Object {
          "color": "#1A9550",
          "display": "flex",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "lineHeight": 16,
        },
      ]
    }
  >
    ↗
  </Text>
</View>
`;

exports[`renders placeholders without a change 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "stretch",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#5F667D",
          "display": "flex",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "lineHeight": 16,
        },
      ]
    }
  >
    -
     
  </Text>
  <View
    style={
      Array [
        Object {
          "display": "flex",
          "flexGrow": 0,
          "flexShrink": 0,
          "height": 0,
          "width": 0,
        },
      ]
    }
  />
  <Text
    style={
      Array [
        Object {
          "color": "#44495A",
          "display": "flex",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "lineHeight": 16,
        },
      ]
    }
  >
    
  </Text>
</View>
`;
